--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Hello</h1>
+    <header>
+        <h1>Welcome To WEB160 Blogs</h1>
+    </header>
+    
+    <main>
+        <h2>Welcome!!</h2>
+    </main>
 </body>
 </html>
