--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -10,10 +10,13 @@
 </head>
 <body>
     <header>
-        <h1>Welcome To WEB160 Blogs</h1>
+        <nav>
+            
+        </nav>
     </header>
     
     <main>
+        <h1>Welcome To WEB160 Blogs</h1>
         <h2>Welcome!!</h2>
     </main>
 </body>
