--- a/about.html
+++ b/about.html
@@ -11,7 +11,10 @@
 <body>
     <header>
         <nav>
-
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+            </ul>
         </nav>
     </header>
     
