update header format

--- a/ap-switch.html
+++ b/ap-switch.html
@@ -21,7 +21,7 @@
     <main>
         <h1>Unifi Access Points and Switches</h1>
         <section>
-            <h2 id="I">I. Ubiquiti Unifi Access Point (AP)</h2>
+            <h2 id="I">1. Ubiquiti Unifi Access Point (AP)</h2>
             <figure>
                 <img src="imgs/unifi-ap.png" alt="Unifi AP">
                 <figcaption>1. Unifi Access Point</figcaption>
@@ -65,7 +65,7 @@
         </section>
 
         <section>
-            <h2 id="II">II. Ubiquiti Unifi Powered over Ethernet (PoE) Switches</h2>
+            <h2 id="II">2. Ubiquiti Unifi Powered over Ethernet (PoE) Switches</h2>
             <p>
                 Powered over Ethernet (PoE) switches are switches that can power PoE devices. In the last 20 years ago, when schools and businesses want to install an infrastructure network for their campuses, they always must think about where to put an electrical outlet so that it can power Access Points. Imagining putting 100 Access Points (AP) around campuses, there must be at least 60 to 80 electrical outlets nearby to plug all the Access Points. On top of that, all the ethernet cables must be connected between the APs and switches to receive and transfer data. For these reasons, it costs a lot of money for to setup the infrastructure like that. 
             </p>
