--- a/ap-switch.html
+++ b/ap-switch.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Unifi Access Point and Switches</title>
+    <meta name="keywords" content="networking, unifi, ubiquiti, access point, ap, switches, poe">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
     <script src="/js/main.js"></script>
