--- a/usg-setup.html
+++ b/usg-setup.html
@@ -31,7 +31,7 @@
             Unifi Security Gateways and General Ubiquiti Networks Setup
          </h1>
          <section>
-            <h2>
+            <h2 id="post1">
                Ubiquiti Unifi Security Gateways (USG)
             </h2>
             <p>
@@ -47,7 +47,7 @@
                <img src="\imgs\usg.jpg" alt="Unifi Security Gateways"> 
                <figcaption>1. Unifi Security Gateway and Unifi Security Gateway Pro</figcaption>
             </figure>
-            <table style="width:100%">
+            <table style="width:80%">
                <tr>
                   <th></th>
                   <th>USG</th>
@@ -75,8 +75,10 @@
                At a glance, Unifi Security Gateway Pro has more processor power, more <a href="https://en.wikipedia.org/wiki/Random-access_memory">Random Access Memory (RAM)</a>, and more ethernet ports to process more clients at the same time. Unifi Security Gateway is a small compact security gateway. It is designed for home and small businesses that have less than 500 clients. In the other hand, USG Pro is bigger and faster, and it is often mounted on a <a href="https://en.wikipedia.org/wiki/19-inch_rack">network rack</a> along with other networking devices such as switches, server computers, etc.
             </p>
          </section>
+         
+         
          <section>
-            <h2>
+            <h2 id="post2">
                General Ubiquiti Networks Setup
             </h2>
             <h3>
