--- a/week2/1-usg.html
+++ b/week2/1-usg.html
@@ -22,7 +22,7 @@
          <nav>
             <ul>
                <li><a href="/">Home</a></li>
-               <li><a href="about.html">About</a></li>
+               <li><a href="/about.html">About</a></li>
             </ul>
          </nav>
       </header>
