fix images size

--- a/week3/2-setup.html
+++ b/week3/2-setup.html
@@ -15,6 +15,11 @@
          #table2 td, #table2 th {
          border: 1px solid black;
          }
+
+         img {
+            height: auto;
+            width: 50%;
+         }
       </style>
    </head>
    <body>
