Week 4 - Blog Posts

--- a/about.html
+++ b/about.html
@@ -11,15 +11,16 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="topnav" id="myTopnav">
                 <li><a href="/">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li class="icon"> <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a> </li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <h1>About Me</h1>
+        <h1>About Page</h1>
         
         <section>
             <h2>I. Ubiquiti Network</h2>
