--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="topnav" id="myTopnav">
                 <li><a href="/">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li class="icon"> <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a> </li>
             </ul>
         </nav>
     </header>
-    
+
     <main>
         <h1>Welcome To WEB160 Blogs</h1>
         <h2>Welcome!!</h2>
