--- a/week3/1-usg.html
+++ b/week3/1-usg.html
@@ -20,9 +20,10 @@
    <body>
       <header>
          <nav>
-            <ul>
+            <ul class="topnav" id="myTopnav">
                <li><a href="/">Home</a></li>
                <li><a href="/about.html">About</a></li>
+               <li class="icon"> <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a> </li>
             </ul>
          </nav>
       </header>
