--- a/week4/1-unraid.html
+++ b/week4/1-unraid.html
@@ -41,7 +41,7 @@
              </h2>
 
              <p>
-                One thing that set unRaid OS aside is that users have to purchase a license to run unRaid OS. However, the license if a lifetime fee. There are three versions of unRaid OS licenses, which are Basic, Plus, and Pro. unRaid also comes with a 30-Day Free Trial with the Pro version for users to try it.
+                One thing that set unRaid OS aside is that users have to purchase a license to run unRaid OS. However, the license is a lifetime fee. There are three versions of unRaid OS licenses, which are Basic, Plus, and Pro. unRaid also comes with a 30-Day Free Trial with the Pro version for users to try it.
              </p>
 
              <ol>
