--- a/week2/index.html
+++ b/week2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Week 3</title>
+    <title>Week 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
     <script src="/js/main.js"></script>
@@ -20,9 +20,9 @@
     </header>
 
     <main>
-        <h1>Week 3</h1>
-        <p><a href="1-usg.html">Blog #1</a></p>
-        <p><a href="2-setup.html">Blog #2</a></p>
+        <h1>Week 1</h1>
+        <p><a href="1-ap-switch.html">Blog #1</a></p>
+        <p><a href="2-usg-setup.html">Blog #2</a></p>
     </main>
 </body>
 </html>
