fix paragragh arrangement

--- a/week5/1-docker.html
+++ b/week5/1-docker.html
@@ -31,7 +31,7 @@
                From the previous <a href="https://ngocdai94.github.io/week4/1-unraid.html">post</a>, I shared about unRaid Operating System, and its amazing features when it is using as a Networking Server and Network Attached Storage. Also, the unRaid’s ability to host multiple virtual machines to use as a software development environment, cyber security firewall to prevent hackers, and testing a malicious link from a stranger.
             </p>
             <p>
-                One of the other cool features from unRaid OS that I forgot to mention from the last post is <a href="https://www.docker.com/">Docker</a>, which has been a huge success in the software development, software development, and <a href="https://en.wikipedia.org/wiki/DevOps">DevOps</a> community.                
+                One of the other cool features from unRaid OS that I forgot to mention from the last post is <a href="https://www.docker.com/">Docker</a>, which has been a huge success in the software development, and <a href="https://en.wikipedia.org/wiki/DevOps">DevOps</a> community.                
             </p>
         </section>
 
@@ -45,18 +45,6 @@
 
             <p>
                 In other word, Docker is similar to virtual machine. It requires a host machine to host a Docker container, which is similar to a disk <a href="https://en.wikipedia.org/wiki/International_Organization_for_Standardization">International Organization for Standardization (ISO)</a> image file. The host machine needs to install a container reader to read the Docker container images.
-            </p>
-        </section>
-
-        <section>
-            <h2>
-                What is the benefits of using Docker?
-            </h2>
-            <p>
-                One of the main benefits of using Docker is that the host machine literally does not have to install any extra drivers to run Docker containers. Docker containers will handle all of the communication via its own channel of network using the Internet. Therefore, it allow fast deployment on multiple host machines. To help you understanding Docker easily, considering the example below.  
-            </p>
-            <p>
-                Imaging an IT Technician has to configure and install softwares to more than 100 of PCs in a day. There is absolutely now way the IT Technician can finish this job in a day. However, if the IT Technician uses Docker containers on all of the PCs, all of them will connect to a central host, which the IT Technician send a command to all the PCs to install software on the Docker containers.
             </p>
         </section>
 
@@ -75,6 +63,18 @@
             <p>After that, you can navigate to the APPS tab to choose the built-in container for the unRaid OS, or you can import your own Docker container from the DOCKER tab.</p>
             <img src="/imgs/docker-3.png" alt="Buil-in Docker Containers"><br>
             <figcaption>3. Built-in Docker Containers</figcaption>
+        </section>
+
+        <section>
+            <h2>
+                What is the benefits of using Docker?
+            </h2>
+            <p>
+                One of the main benefits of using Docker is that the host machine literally does not have to install any extra drivers to run Docker containers. Docker containers will handle all of the communication via its own channel of network using the Internet. Therefore, it allow fast deployment on multiple host machines. To help you understanding Docker easily, considering the example below.  
+            </p>
+            <p>
+                Imaging an IT Technician has to configure and install softwares to more than 100 of PCs in a day. There is absolutely now way the IT Technician can finish this job in a day. However, if the IT Technician uses Docker containers on all of the PCs, all of them will connect to a central host, which the IT Technician send a command to all the PCs to install software on the Docker containers.
+            </p>
         </section>
       </main>
    </body>
