--- a/week6/amplifi-1.html
+++ b/week6/amplifi-1.html
@@ -38,7 +38,7 @@
                 Figure 1 below shows what Unifi Amlifi Wi-Fi look like. The square one is called a router, which is also a main networking device to get Internet data and transfer the data to clients via wireless receivers, which are the ones on each side of the router.
             </p>
             <img src="/imgs/amplifi-1.png" alt="Amplifi Wi-Fi"><br>
-            <figcaption>1. Amplifi Wi-Fi</figcaption>
+            <figcaption>1. Amplifi Wi-Fi</figcaption><br>
         </section>
 
         <section>
