--- a/week6/amplifi-1.html
+++ b/week6/amplifi-1.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Ubiquiti Networks Consumer Products - Part 1</title>
-      <meta name="keywords" content="amplifi, hd, mesh, wireless, network">
+      <meta name="keywords" content="ubiquiti, unifi, amplifi, hd, mesh, wireless, network">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
       <script src="/js/main.js"></script>
@@ -25,7 +25,7 @@
         </h1>
 
         <p>
-            From the last review <a href="https://ngocdai94.github.io/week5/1-review.html">post</a>, I reviewed about the Ubiquiti Enterprise Networking products, how to setup a general Ubiquiti system, and what is a good operating system to use with Ubiquiti Networks. Ubiquiti Networks make most their networking products as an enterprise grade, which means that the devices are extremely well-made and can operating under stress condition such as extremely hot and cold environment. For these reasons, the enterprise grade networking products are expensive.
+            From the last <a href="https://ngocdai94.github.io/week5/1-review.html">review post</a>, I reviewed about the Ubiquiti Enterprise Networking products, how to setup a general Ubiquiti system, and what is a good operating system to use with Ubiquiti Networks. Ubiquiti Networks make most their networking products as an enterprise grade, which means that the devices are extremely well-made and can operating under stress condition such as extremely hot and cold environment. For these reasons, the enterprise grade networking products are expensive.
         </p>
          <section>
             <h2>
