--- a/week6/amplifi-2.html
+++ b/week6/amplifi-2.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Ubiquiti Networks Consumer Products - Part 2</title>
-      <meta name="keywords" content="amplifi, hd, mesh, wireless, network, gamer, nvidia, edition">
+      <meta name="keywords" content="ubiquiti, unifi, amplifi, hd, mesh, wireless, network, gamer, nvidia, edition">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
       <script src="/js/main.js"></script>
