--- a/week5/1-docker.html
+++ b/week5/1-docker.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Unraid Operating Systems (OS) - Dockers</title>
-      <meta name="keywords" content="unraid, operating, system, os, docker, container">
+      <meta name="keywords" content="unraid, operating, system, os, docker, containers">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
       <script src="/js/main.js"></script>
@@ -28,7 +28,7 @@
                Dockers
             </h2>
             <p>
-               From the previous <a href="https://ngocdai94.github.io/week4/1-unraid.html">post</a>, I shared about unRaid Operating System, and its amazing features when it is using as a Networking Server and Network Attached Storage. Also, the unRaid’s ability to host multiple virtual machines to use as a software development environment, cyber security firewall to prevent hackers, and testing a malicious link from a stranger.
+               From the <a href="https://ngocdai94.github.io/week4/1-unraid.html">unRaid</a> post, I shared about unRaid Operating System, and its amazing features when it is using as a Networking Server and Network Attached Storage. Also, the unRaid’s ability to host multiple virtual machines to use as a software development environment, cyber security firewall to prevent hackers, and testing a malicious link from a stranger.
             </p>
             <p>
                 One of the other cool features from unRaid OS that I forgot to mention from the last post is <a href="https://www.docker.com/">Docker</a>, which has been a huge success in the software development, and <a href="https://en.wikipedia.org/wiki/DevOps">DevOps</a> community.                
