--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
 
     <main>
         <h1>Welcome To WEB160 Blogs</h1>
-        <h2>Welcome!!</h2>
+
+        <h2>My Weekly Blog Posts</h2>
+        <ul>
+            <li><a href="/week2/index.html">Week 2</a></li>
+            <li><a href="/week3/index.html">Week 3</a></li>
+            <li><a href="/week4/index.html">Week 4</a></li>
+            <li><a href="/week5/index.html">Week 5</a></li>
+            <li><a href="/week6/index.html">Week 6</a></li>
+            <li><a href="/final/index.html">Final Week</a></li>
+        </ul>
     </main>
 </body>
 </html>
