--- a/final/index.html
+++ b/final/index.html
@@ -97,7 +97,7 @@
             <ol>
                 <li>Extremely fast uploading/downloading to the AWS services anywhere in the world.</li>
                 <li>Affordable price. Pay as you go and only pay to the services that you are using.</li>
-                <li>Strong and up-to-date security.</li>
+                <li>Strong and up-to-date back-end security server.</li>
                 <li>Back-end enterprise networking products worry-free.</li>
                 <li>AWS is a scalable service. No matter how big your businesses are going to be, AWS will be always scalable to your businesses’ size.</li>
             </ol>
