--- a/final/index.html
+++ b/final/index.html
@@ -109,7 +109,7 @@
 
             <p>Furthermore, we are going to expect the same thing to hardware as well. For example, Apple has a program called “New iPhone Ever Year.” This means that users pay Apple a monthly fee to rent an iPhone. When a new iPhone comes out, they can trade the old one to get a new one.</p>
 
-            <p>Another example is Google Stadia and Nvidia GeForce Now. Google Stadia and Nvidia GeForce Now are cloud gaming services. Instead of building a very expensive gaming PC to play heavy graphic games with a high frame rate per second (FPS), they can play those games directly on the cloud.</p>
+            <p>Another example is <a href="https://store.google.com/product/stadia?gclid=Cj0KCQiAk7TuBRDQARIsAMRrfUZsQKRrzMyu6YzoAxyqjSvcBdgzki1NcxJEYzkmKKtzcibxSbUmkjgaAtWyEALw_wcB">Google Stadia</a> and <a href="https://www.nvidia.com/en-gb/geforce/products/geforce-now/">Nvidia GeForce Now</a>. Google Stadia and Nvidia GeForce Now are cloud gaming services. Instead of building a very expensive gaming PC to play heavy graphic games with a high frame rate per second (FPS), they can play those games directly on the cloud.</p>
 
             <p>All these services always rely heavily on the Data Center. For this reason, subscription to use a service is going to be very popular in the future, and make sure you have a reserved big pocket when that time comes :).</p>
         </section>
