--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="/week4/index.html">Week 4</a></li>
             <li><a href="/week5/index.html">Week 5</a></li>
             <li><a href="/week6/index.html">Week 6</a></li>
+            <li><a href="/week7/index.html">Week 7</a></li>
             <li><a href="/final/index.html">Final Week</a></li>
         </ul>
     </main>
