--- a/week7/index.html
+++ b/week7/index.html
@@ -98,6 +98,8 @@
         <section>
             <h2>Conclusion</h2>
             <p>Unifi Amplifi products make consumers’ wireless experience simple. Depending on what you need, I am sure that you know which unifi amplify products work best for you now :).</p>
+            <p>For the upcomming Thanks Giving and Black Friday, there is going to be a lot of discount on electronics. <a href="https://www.amazon.com">Amazon</a>, <a href="https://www.ebay.com">Ebay</a>, and <a href="https://www.bestbuy.com">BestBuy</a> are the top electronics stores that have a lot of sale on Thanks Giving and Black Friday holiday. </p>
+            <p>Good luck, and I hope you will find a good deal in Ubiquiti Networks products :).</p>
         </section>
       </main>
    </body>
