--- a/week7/index.html
+++ b/week7/index.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Ubiquiti Networks Consumer Products - Final Part</title>
-      <meta name="keywords" content="ubiquiti, unifi, amplifi, instant, consumer, products, mesh, wireless, network">
+      <title>Ubiquiti Networks Consumer Products - Final Part - Holiday Gifts</title>
+      <meta name="keywords" content="ubiquiti, unifi, amplifi, instant, consumer, products, mesh, wireless, network, networking, enterprise, upcomming, black, friday, thanks, giving, 2019, sale, discount">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
       <script src="/js/main.js"></script>
@@ -21,7 +21,7 @@
              </header>
       <main>
         <h1>
-            Ubiqiti Unifi Amplifi Instant
+            Ubiqiti Unifi Amplifi Instant - A Perfect Thanks Giving Gift and Black Friday Deal.
         </h1>
 
         <p>
