--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a href="/week5/index.html">Week 5</a></li>
             <li><a href="/week6/index.html">Week 6</a></li>
             <li><a href="/week7/index.html">Week 7</a></li>
+            <li><a href="/week8/index.html">Week 8</a></li>
             <li><a href="/final/index.html">Final Week</a></li>
         </ul>
     </main>
