--- a/index.html
+++ b/index.html
@@ -20,19 +20,8 @@
     </header>
 
     <main>
-        <h1>Welcome To WEB160 Blogs</h1>
-
-        <h2>My Weekly Blog Posts</h2>
-        <ul>
-            <li><a href="/week2/index.html">Week 2</a></li>
-            <li><a href="/week3/index.html">Week 3</a></li>
-            <li><a href="/week4/index.html">Week 4</a></li>
-            <li><a href="/week5/index.html">Week 5</a></li>
-            <li><a href="/week6/index.html">Week 6</a></li>
-            <li><a href="/week7/index.html">Week 7</a></li>
-            <li><a href="/week8/index.html">Week 8</a></li>
-            <li><a href="/final/index.html">Final Week</a></li>
-        </ul>
+        <h1>Welcome To My Website</h1>
+        <h2>My website is switching from PHP to Javascript since I've decided to switch to GitHub as a Web Hosting. Please check back Later</h2>
     </main>
 </body>
 </html>
