--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <main>
         <h1>Welcome To My Website</h1>
         <h2>My website is switching from PHP to Javascript since I've decided to switch to GitHub as a Web Hosting. Please check back Later</h2>
+        <h3>Please check my github page for more information.
+            <a href="https://github.com/ngocdai94">https://github.com/ngocdai94</a>
+        </h3>
     </main>
 </body>
 </html>
