Form is working. Updating Resume

--- a/index.html
+++ b/index.html
@@ -89,13 +89,20 @@
 		<main>
 			<section class="container-contact100" id="contact-popup" style="display: none;">
 				<div class="wrap-contact100">
-					<form class="contact100-form validate-form" action="https://formspree.io/f/xknywbao" method="POST">
+					<!-- <a class="btn-hide-contact100" href="javascript:void(0)" onclick="closeContactForm()"> 
+						<i class="fas fa-times"></i> 
+					</a> -->
+					<div class="x-location">
 						<a class="btn-hide-contact100" href="javascript:void(0)" onclick="closeContactForm()"> 
 							<i class="fas fa-times"></i> 
 						</a>
+					</div>
+
+					<form class="contact100-form validate-form" action="https://formspree.io/f/xknywbao" method="POST">
+						
 						
 						<span class="contact100-form-title">
-							<h2>Get in touch!</h2>
+							<h2>Let's get in touch!</h2>
 						</span>
 
 						<div class="wrap-input100 validate-input" data-validate="Required"> 
@@ -121,7 +128,7 @@
 
 						<input type="hidden" name="_next" value="https://dai-nguyen.com?success"> 
 						<span class="note-input100"> <small>Help me fight spams!</small> <small>You will be taken to a reCAPTCHA page upon submission.</small><br> <small>To send message from your favorite mail client instead, 
-						<a data-bind="attr: { href: url }" href="mailto:hello@dai-nguyen.com?subject=&amp;body=">click here</a>.</small> </span>
+						<a data-bind="attr: { href: url }" href="mailto:hello@dai-nguyen.com?subject=&amp;body=">click here</a>.</small> </span> <br>
 
 						<div class="container-contact100-form-btn"> 
 							<button class="contact100-form-btn"> 
@@ -200,6 +207,15 @@
 			<section class="experience">
 				<h2>Relevant Experience</h2>
 				<ul>
+					<li>
+						<h3>September 2019 - Feburary 2021</h3>
+						<h4>SYNC-N-SCALE</h4>
+						<h5>Full Stack Engineer</h5>
+						<p>Designed and implemented a web application to reverse more than 100 geographic locations at the same time to Google Maps by using Latitude and Longitude from Degree, Minute, and Second (DMS) format. </p>
+						<p>
+						Integrated a front-end to back-end upload so that a csv file of Latitude and Longitude coordinates could be uploaded to a MySQL Database and pulled them to the front-end to reverse all geographic locations.</p>
+					</li>
+
 					<li>
 						<h3>June 2017 - August 2017</h3>
 						<h4>Seattle University</h4>
