update 404 and partial working jekyll

--- a/index.html
+++ b/index.html
@@ -68,12 +68,6 @@
 	<div class="content">
 		<header>
 			<div class="headerBackgroundImage"></div>
-			<!-- <nav class="topnav">
-				<a href="/">Home</a>
-				<a href="http://dlresume.dai-nguyen.com" download="Dai Nguyen - Resume">Download Resume</a>
-				<a href="contactme.php">Contact Me</a>
-			</nav> -->
-
 			<nav>
 				<ul class="topnav" id="myTopnav">
 					<li><a href="/">Home</a></li>
@@ -84,9 +78,7 @@
 
 				</ul>
 			</nav>
-		</header>
 
-		<main>
 			<section class="container-contact100" id="contact-popup" style="display: none;">
 				<div class="wrap-contact100">
 					<!-- <a class="btn-hide-contact100" href="javascript:void(0)" onclick="closeContactForm()"> 
@@ -140,7 +132,9 @@
 					</form>
 				</div>
 			</section>
+		</header>
 
+		<main>
 			<section class="aboutMe">
 				<div class="leftColumn">
 					<h1>Dai Nguyen</h1>
@@ -221,7 +215,7 @@
 						<h4>Seattle University</h4>
 						<h5>Undergraduate Research Assistant</h5>
 						<p>Provideded ongoing assistance to an assigned faculty member, and handled various
-							responsibilities related to research projects and miscellaneous assignments</p>
+							responsibilities related to research projects and miscellaneous assignments.</p>
 					</li>
 
 					<li>
@@ -229,7 +223,7 @@
 						<h4>Seattle City Light</h4>
 						<h5>Electrical Engineering Intern</h5>
 						<p>Designed, tested, and developed a prototype for a DC distribution circuit to charge a
-							cellphone, using 6VDC alkaline battery and 5V USB charger</p>
+							cellphone, using 6VDC alkaline battery and 5V USB charger.</p>
 					</li>
 
 					<li>
@@ -237,7 +231,7 @@
 						<h4>Seattle University</h4>
 						<h5>Teaching Assistant</h5>
 						<p>Provided ongoing assistance to laboratory students, specifically with developing and
-							comprehending programming projects using VHDL to FPGA</p>
+							comprehending programming projects using VHDL to FPGA.</p>
 					</li>
 				</ul>
 			</section>
