--- a/projects/puppet.html
+++ b/projects/puppet.html
@@ -25,7 +25,11 @@
 	</noscript>
 </head>
 
-<main>  
+<main>
+    <header id="header">
+
+    </header>  
+
     <section class="projectPage">
         <h1>AUTOMATED DANCING PUPPET</h1>
         <p>Engineering lab project using hardware and software to control a puppet</p>
@@ -74,4 +78,9 @@
             <p>I focused mainly on the software side of the project and worked together with my partner on other areas on the projects, including the troubleshooting and testing aspects.</p>
         </div>
     </section>
+
+    <footer id="footer">
+
+    </footer>
 </main>
+</html>
