--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@ layout: default
 			<figure>
 				<picture>
 					<source type="image/webp" data-srcset="/_assets/imgs/profile.webp">
-					<img class="lazy profilePhoto" data-src="/_assets/imgs/lazy-profile.jpg"
-						data-srcset="/_assets/imgs/profile.jpg" alt="profile photo">
+					<img class="lazy profilePhoto" data-src="/_assets/imgs/lazy-profile.jpg" data-srcset="/_assets/imgs/profile.jpg" alt="profile photo">
 				</picture>
 			</figure>
 		</div>
