fix 404 css path

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <!-- Social media meta-->
     <meta property="og:title" content="Page not found">
     <meta property="og:description" content="Page not found">
-    <meta property="og:image" content="https://www.dai-nguyen.com/imgs/profile.jpg">
+    <meta property="og:image" content="https://www.dai-nguyen.com/_assets/imgs/profile.jpg">
     <meta property="og:url" content="https://www.dai-nguyen.com/404.html">
     
     <!-- Favicon -->
@@ -26,7 +26,7 @@
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 
     <!-- CSS & FontAwesome-->
-    <link rel="stylesheet" type="text/css" href="/css/404.css">
+    <link rel="stylesheet" type="text/css" href="/_assets/css/404.css">
 </head>
 <body>
     <div class="container-404">
