mirror other repo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 			<figure>
 				<picture>
 					<source type="image/webp" data-srcset="/_assets/imgs/profile.webp">
-					<img class="lazy profilePhoto" data-src="/_assets/imgs/lazy-profile.jpg" data-srcset="/_assets/imgs/profile.jpg" alt="profile photo">
+					<img class="lazy profilePhoto" width="600" height="458" data-src="/_assets/imgs/lazy-profile.jpg" data-srcset="/_assets/imgs/profile.jpg" alt="profile photo">
 				</picture>
 			</figure>
 		</div>
