Reduced Layout Shift

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <main>
-	<section class="aboutMe">
+	<section class="aboutMe" style="min-height:650px;">
 		<div class="leftColumn">
 			<h1>Dai Nguyen</h1>
 			<p>I'm an Electrical/Computer Engineer, and Computer Networking enthusiast.</p>
