Reduced Layout Shift

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ layout: default
 		</div>
 	</section>
 
-	<section class="experience">
+	<section class="experience" style="min-height:700px;">
 		<h2>Relevant Experience</h2>
 		<ul>
 			<li>
