Recuded Layout Shift

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<main>
+<main style="min-height:3000px;">
 	<section class="aboutMe" style="min-height:650px;">
 		<div class="leftColumn">
 			<h1>Dai Nguyen</h1>
