--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 			<figure>
 				<picture>
 					<source type="image/webp" data-srcset="/_assets/imgs/profile.webp">
-					<img class="lazy profilePhoto" width="600" height="458" data-src="/_assets/imgs/lazy-profile.jpg" data-srcset="/_assets/imgs/profile.jpg" alt="profile photo">
+					<img class="lazy profilePhoto" width="600" height="600" data-src="/_assets/imgs/lazy-profile.jpg" data-srcset="/_assets/imgs/profile.jpg" alt="profile photo">
 				</picture>
 			</figure>
 		</div>
@@ -50,6 +50,11 @@ layout: default
 					</span>
 				</div>
 			</div>
+
+			<div class="tableRow">
+				<div class="tableCell_1">Current Role</div>
+				<div class="tableCell_2">Software Engineer at <a href="https://www.macysinc.com/">Macy's</a></div>
+			</div>
 		</div>
 
 		<div class="socialNetwork">
@@ -68,6 +73,13 @@ layout: default
 	<section class="experience" style="min-height:700px;">
 		<h2>Relevant Experience</h2>
 		<ul>
+			<li>
+				<h3>April 2022 - Present</h3>
+				<h4>Macy's</h4>
+				<h5>Softwar Engineer</h5>
+				<p>Responsible for infrastructure migration, maintaining existing functionality, as well as implementing new features following Macy’s new warehouse management system. </p>
+			</li>
+
 			<li>
 				<h3>September 2019 - Feburary 2021</h3>
 				<h4>SYNC-N-SCALE</h4>
@@ -93,13 +105,13 @@ layout: default
 					cellphone, using 6VDC alkaline battery and 5V USB charger.</p>
 			</li>
 
-			<li>
+			<!-- <li>
 				<h3>January 2017 - March 2017</h3>
 				<h4>Seattle University</h4>
 				<h5>Teaching Assistant</h5>
 				<p>Provided ongoing assistance to laboratory students, specifically with developing and
 					comprehending programming projects using VHDL to FPGA.</p>
-			</li>
+			</li> -->
 		</ul>
 	</section>
 
