--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: default
 			<li>
 				<h3>April 2022 - Present</h3>
 				<h4>Macy's</h4>
-				<h5>Softwar Engineer</h5>
+				<h5>Software Engineer</h5>
 				<p>Responsible for infrastructure migration, maintaining existing functionality, as well as implementing new features following Macy’s new warehouse management system. </p>
 			</li>
 
